2002-08-18  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/atom.h :
	* exp/atom.c :

	  - Added a copy function.

2002-08-16  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* exp/Makefile :
	* exp/atom.h :
	* exp/atom.c :

	  - Added atom.

	* parser/parser.y :
	* parser/scanner.l :

	  - Identifier token is now limited to 128 characters. Unfortunately
	    there is no clean way to dereference C macros from flex regular
	    expressions.

2002-08-15  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* Makefile :
	* kb/Makefile :
	* kb/atom_type.h :
	* kb/gnd_atom.c :
	* kb/gnd_atom.h :
	* kb/gnd_atomlist.c :
	* kb/gnd_atomlist.h :

	  - Removed kb files. These will be replaced by the expression
	    component.

	* ident/ident.h :
	* ident/identlist.c :
	* ident/identlist.h :
	* parser/parser.y :

	  - Added check to see if an identifier has been declared more than
	    once.

	* ident/Makefile :
	* ident/ident.c :
	* ident/ident.h :
	* ident/identlist.h :
	* ident/identlist.c :

	  - A new structure that uses simplelist to store identifiers and
	    their type.

	* symtab/Makefile :
	* symtab/ident_type.h :
	* symtab/symtab.h :
	* symtab/symtab.c :

	  - Removed. We no longer need to store symbols. Instead, we store
	    identifiers.

	* Makefile :
	* main/Makefile :
	* main/epilog.c :
	* parser/parser.y :
	* parser/scanner.l :

	  - parser now correctly stores identifiers in identifier list.

	* Makefile :
	* test/Makefile :
	* test/datastruct_test.c :

	   - Added test program for datastruct.

	* datastruct/simplelist.h :
	* datastruct/simplelist.c :

	  - Added a structure that has no internal indexing.

	* datastruct/indexedlist.c :

	  - Length now decrements when deleteing.

2002-08-13  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* docs/langspecs :

	  - Added comment section.

	* docs/sample :

	  - Changed to new language.

	* docs/bnf.txt :
	* main/epilog.c :
	* parser/parser.h :
	* parser/parser.y :
	* parser/scanner.l :
