@@ -1,5 +1,11 @@
 2002-08-18  Vino Crescini  <jcrescin@cit.uws.edu.au>
 
+	* exp/expression.h :
+	* exp/expression.c :
+
+	  - Added a list of atoms (expression). Represents a conjuntion
+	    of logical atoms.
+
 	* exp/atom.h :
 	* exp/atom.c :
 
